--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,11 @@
     flex-wrap: wrap;
     font-size: 24px;
 }
+.item {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 .item:nth-child(1) {
     background-color: darkorange;
     order: -1;
